# mcp_omlx

./: .gitignore  README.md  mcp.example.json  pyproject.toml
doc/: api_reference.md  deployment_guide.md
src/omlx_mcp/: __init__.py  server.py
