[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omlx-mcp"
version = "0.1.0"
description = "MCP server for the oMLX local inference server."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
omlx-mcp = "omlx_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/omlx_mcp"]
